# esmaga.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
docs/: CNAME  en.html  index.html
scripts/: install-finder-action.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: update.key.pub
src-tauri/libs/: libSvtAv1Enc.4.1.0.dylib  libavdevice.62.3.101.dylib  libavfilter.11.14.101.dylib  libavformat.62.12.101.dylib  libavutil.60.26.101.dylib  libdav1d.7.dylib  libmp3lame.0.dylib  libopus.0.dylib  libssl.3.dylib  libswresample.6.3.101.dylib  libswscale.9.5.101.dylib  libvmaf.3.dylib  libvpx.12.dylib  libx264.165.dylib
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/main/: main.ts  preload.ts
src/renderer/: App.tsx  fonts.css  i18n.ts  index.css  main.tsx
src/shared/: types.ts
